// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContributionCard /> Petit plus matches with snapshot 1`] = `
<article
  className="sc-bwzfXH gHtNyi k-ContributionCard"
  style={
    Object {
      "--contributionCard--border-color": "var(--color-grey-400)",
      "--contributionCard--border-radius": "0.5rem",
      "--contributionCard--border-style": "dashed",
    }
  }
>
  <div
    className="k-ContributionCard__imageWrapper"
  >
    <img
      alt=""
      src="/kitten.jpg"
    />
  </div>
  <div
    className="k-ContributionCard__gridWrapper"
  >
    <span
      className="k-u-color-font1 k-u-weight-bold k-ContributionCard__title"
    >
      Lorem ipsum dolor sit amet, consectetuer
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-light k-ContributionCard__description"
      >
        adipiscing ligula eget dolor eget dolor.eget dolor.eget dolor.
      </p>
    </span>
    <div
      className="sc-EHOje gwxDue k-Form-TextInputWithUnit k-Form-TextInputWithUnit--orion k-ContributionCard__inputWrapper"
    >
      <input
        className="sc-bxivhb ctqJsg k-Form-TextInput k-Form-TextInputWithUnit__input k-ContributionCard__input k-Form-TextInput--orion k-Form-TextInput--regular"
        disabled={false}
        name="text"
        onChange={[Function]}
        type="number"
      />
      <span
        className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular"
      >
        €
      </span>
    </div>
    <button
      className="sc-bdVaJa kYCLyN k-Button k-ContributionCard__action k-Button--regular k-Button--helium k-Button--orion k-Button--fit-content k-Button--disabled"
      disabled={true}
      style={
        Object {
          "--Button-border-radius": "0.25rem",
        }
      }
      type="submit"
    >
      Ajouter
    </button>
  </div>
</article>
`;

exports[`<ContributionCard /> default matches with snapshot 1`] = `
<article
  className="sc-bwzfXH gHtNyi k-ContributionCard"
  style={
    Object {
      "--contributionCard--border-color": "var(--color-grey-400)",
      "--contributionCard--border-radius": "0.5rem",
      "--contributionCard--border-style": "solid",
    }
  }
>
  <div
    className="k-ContributionCard__imageWrapper"
  >
    <img
      alt=""
      src="/kitten.jpg"
    />
  </div>
  <div
    className="k-ContributionCard__gridWrapper"
  >
    <span
      className="k-u-color-font1 k-u-weight-bold k-ContributionCard__title k-ContributionCard__title--large"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing ligula eget dolor eget dolor.eget dolor.eget dolor.
    </span>
    <span
      className="k-u-color-font1 k-u-size-huge k-u-weight-bold k-ContributionCard__amount"
    >
      1005 €
    </span>
  </div>
</article>
`;
